<resources>
    <string name="app_name">RENTAL</string>
    <string name="title_houses">HOUSES</string>
    <string name="title_dashboard">DASHBOARD</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register_info">If you are a new user click REGISTER</string>
    <string name="register">REGISTER</string>
    <string name="fullName">FULL NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="phone">PHONE</string>
    <string name="address">ADDRESS</string>
    <string name="phoneEmail">PHONE OR EMAIL</string>
    <string name="ok">OK</string>
    <string name="my_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="registration_failed">Registration process failed. Please try again</string>
    <string name="login_failed">Unable to verify credentials</string>
    <string name="register_as_house_owner">REGISTER AS HOUSE OWNER</string>
    <string name="longitude">LONGITUDE</string>
    <string name="latitude">LATITUDE</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="add_house">ADD HOUSE</string>
    <string name="your_current_location">YOUR CURRENT LOCATION</string>
    <string name="select_from_map">SELECT LOCATION FROM MAP</string>
    <string name="floor_count">FLOOR COUNT</string>
    <string name="no_thanks">No Thanks</string>
    <string name="set_current_location">SET</string>
    <string name="get_your_location">GET YOUR LOCATION</string>
    <string name="invalid_credentials">Invalid credentials provided</string>
    <string name="selected_image_of_the_house">Selected image of the house</string>
    <string name="house_image">House image of the user</string>
    <string name="dummy_address">Tupek, Chunekhel, BUD-13</string>
    <string name="dummy_tenancies_count">4</string>
    <string name="tenancies_cap">TENANCIES</string>
    <string name="dummy_to_lets_count">2</string>
    <string name="to_lets">TO-LETS</string>
    <string name="floors">FLOORS</string>
    <string name="dummy_floors_count">3</string>
    <string name="update_house">UPDATE HOUSE</string>
    <string name="no_house_yet">NO HOUSE YET</string>
    <string name="floors_info_format">%s Floors</string>
    <string name="add_tenancy">ADD TENANCY</string>
    <string name="dummy_latitude">37.4219983</string>
    <string name="dummy_longitude">-122.084</string>
    <string name="room_type">ROOM TYPE</string>
    <string name="room_count">ROOM COUNT</string>
    <string name="rent_amount">RENT AMOUNT</string>
    <string name="tenant_contact_or_email">TENANT CONTACT OR EMAIL</string>
    <string name="user_selected_image">User selected image</string>
    <string name="add_tenancy_message">Unable to add new tenant. Please try again</string>
    <string name="tenancy_starts_from">TENANCY STARTS FROM</string>
    <string name="dummy_user">Sunil Prasai</string>
    <string name="tenancy_next_due_info_format">Tenant next rent gets due on %s</string>
    <string name="your_next_due_info_format">Your next rent gets due on %s</string>
    <string name="tenancy_next_due_today">Tenant rent got due today</string>
    <string name="tenancy_started_today">Tenancy started today</string>
    <string name="your_rent_due_today">Your rent got due today</string>
    <string name="dummy_room_count">4</string>
    <string name="tenancy_room_count">ROOM COUNT</string>
    <string name="dummy_room_type">FLAT</string>
    <string name="room_rent_amount">RENT AMOUNT</string>
    <string name="dummy_room_rent_amount">16000</string>
    <string name="dummy_tenancy_room_type">FLAT</string>
    <string name="dummy_date">2020–11–30</string>
    <string name="update_image">UPDATE IMAGE</string>
    <string name="edit_tenancy">EDIT TENANCY</string>
    <string name="tenancy_room_images">Tenancy room images</string>
    <string name="view_payments">PAYMENTS</string>
    <string name="view_utilities">UTILITIES</string>
    <string name="advance_amount">ADVANCE AMOUNT</string>
    <string name="due_amount">DUE AMOUNT</string>
    <string name="dummy_advance_amount">800</string>
    <string name="dummy_due_amount">4500</string>
    <string name="tenancy_details_format">Tenant has taken %s rooms on rent for Rs.%s And his rent gets accrued at %s of the month.</string>
    <string name="tenancy_history_details_format">Tenant has paid total of Rs.%s during his tenancy.</string>
    <string name="your_tenancy_history_details_format">You have paid total of Rs.%s during your tenancy.</string>
    <string name="your_tenancy_details_format">You have taken %s rooms on rent for Rs.%s And your rent gets accrued at %s of the month.</string>
    <string name="dummy_tenancy_due_info">Tenant has not paid rent for SEP 2020, OCT 2020 and NOV 2020.</string>
    <string name="dummy_your_tenancy_due_info">You have not paid rent for SEP 2020, OCT 2020 and NOV 2020.</string>
    <string name="add_utility">ADD UTILITY</string>
    <string name="add_payment">ADD PAYMENT</string>
    <string name="is_variable_cost">IS VARIABLE COST?</string>
    <string name="utility_name">UTILITY NAME</string>
    <string name="utility_price">UTILITY PRICE</string>
    <string name="price">PRICE</string>
    <string name="dummy_utility_price">12</string>
    <string name="dummy_utility_name">ELECTRICITY</string>
    <string name="is_variable">IS VARIABLE</string>
    <string name="dummy_is_variable">YES</string>
    <string name="utilities">UTILITIES</string>
    <string name="payable_amount">PAYABLE AMOUNT</string>
    <string name="dummy_payable_amount">8900</string>
    <string name="variable_cost">VARIABLE COST</string>
    <string name="fixed_cost">FIXED COST</string>
    <string name="note">NOTE</string>
    <string name="select_images">SELECT IMAGE(S)</string>
    <string name="adjust_advance_of">ADJUST ADVANCE OF %s</string>
    <string name="include_due_of">INCLUDE DUE OF %s</string>
    <string name="amount_received">AMOUNT RECEIVED</string>
    <string name="payment_made_for">PAYMENT MADE FOR</string>
    <string name="payment_summary">Payment received against RENT, ELECTRICITY, WATER and GARBAGE. Due was included and advance was adjusted</string>
    <string name="amount_payable">AMOUNT PAYABLE</string>
    <string name="dummy_amount_payable">9450</string>
    <string name="dummy_amount_received">9500</string>
    <string name="paid_for">Paid For %s</string>
    <string name="payments">PAYMENTS</string>
    <string name="tenancies">TENANCIES</string>
    <string name="no_tenancy_yet">NO TENANCY YET</string>
    <string name="no_utility_yet">NO UTILITY YET</string>
    <string name="no_payment_yet">NO PAYMENT YET</string>
    <string name="edit_utility">EDIT UTILITY</string>
    <string name="other_adjustments">OTHER ADJUSTMENTS</string>
    <string name="edit_payment">EDIT PAYMENT</string>
    <string name="for_units">\@ Rs.%s for %s Units</string>
    <string name="dummy_amount">120</string>
    <string name="particulars">PARTICULARS</string>
    <string name="calculation">CALCULATION</string>
    <string name="total">TOTAL</string>
    <string name="cleared_all_dues_info">Tenant has cleared all his dues</string>
    <string name="you_cleared_all_dues_info">You have cleared all of your dues</string>
    <string name="dummy_payment_date">17 February 2020</string>
    <string name="title_to_let">TO-LET</string>
    <string name="add_to_let">ADD TO-LET</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="room_facilities">ROOM FACILITIES</string>
    <string name="dummy_facilities_info">Room facilities includes Attached Toilet and Bathroom, Kitchen, Filtered Water and Natural Lighting</string>
    <string name="no_to_lets_yet">NO TO-LETS YET</string>
    <string name="update_to_let">UPDATE TO-LET</string>
    <string name="dummy_to_let_type">FLAT</string>
    <string name="total_review">TOTAL REVIEWS</string>
    <string name="dummy_review_count">12</string>
    <string name="average_review">AVERAGE REVIEW</string>
    <string name="dummy_average_review">4.5</string>
    <string name="dummy_email_address">sunpra12@gmail.com</string>
    <string name="dummy_contact_number">9849147995</string>
    <string name="contact">CONTACT</string>
    <string name="title">TITLE</string>
    <string name="no_items_yet">NO ITEMS YET</string>
    <string name="no_tenancies_history">NO TENANCY HISTORY</string>
    <string name="house_tenancy_history">HOUSE TENANCY HISTORY</string>
    <string name="end_tenancy">END TENANCY</string>
    <string name="tenancy_approved_status">Tenancy approved status</string>
    <string name="utility_approved_status">Utility approved status</string>
    <string name="payment_approved_status">Payment approved status</string>
    <string name="dummy_tenancy_info">Some description about tenancy.</string>
    <string name="filter_to_lets">FILTER TO-LETS</string>
    <string name="min_rent">MINIMUM RENT</string>
    <string name="max_rent">MAXIMUM RENT</string>
    <string name="apply">APPLY</string>
    <string name="preferred_location_address">PREFERRED LOCATION ADDRESS</string>
    <string name="preferred_room_count">PREFERRED ROOM COUNT</string>
    <string name="preferred_rent_range">PREFERRED RENT RANGE</string>
    <string name="preferred_room_type">PREFERRED ROOM TYPE</string>
    <string name="clear">CLEAR</string>
    <string name="no_to_lets_found">NO TO-LETS FOUND</string>
    <string name="your_rating">YOUR RATING</string>
    <string name="review_comment">REVIEW COMMENT</string>
    <string name="comment">COMMENT</string>
    <string name="dummy_review">(4.4 / 10)</string>
    <string name="review_format">(%s / %s)</string>
    <string name="verified_user">VERIFIED TENANT</string>
    <string name="dummy_review_comment">Dummy review comment of the house owner.</string>
    <string name="verified_what">VERIFIED %S</string>
    <string name="dashboard_image">Dashboard image</string>
    <string name="user_dashboard">DASHBOARD</string>
    <string name="user_image">User image</string>
    <string name="dummy_gender">MALE</string>
    <string name="dummy_dob">24 November, 1993</string>
    <string name="edit_profile">Edit profile</string>
    <string name="dummy_number">5</string>
    <string name="house">HOUSE</string>
    <string name="settings">SETTINGS</string>
    <string name="log_out">LOG OUT</string>
    <string name="gender">GENDER</string>
    <string name="new_image">NEW IMAGE</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="dob">DOB</string>
    <string name="contact_number">CONTACT NUMBER</string>
    <string name="use_in_app_vibration">Use in app vibration</string>
    <string name="use_device_shake">Use device shake to reach home fragment</string>
    <string name="use_proximity">Use proximity sensor to lock screen</string>
    <string name="view_more">VIEW MORE</string>
    <string name="view_less">VIEW LESS</string>
    <string name="splash_screen_image">Splash screeen image</string>
    <string name="app_slogan">A SOLUTION TO RESIDENTIAL TENANCY</string>
    <string name="call_tenant">CALL TENANT</string>
    <string name="call_owner">CALL OWNER</string>
</resources>